Area Collaborator and class CollaboratorLogin

--- a/mvCommerce/mvCommerce.csproj
+++ b/mvCommerce/mvCommerce.csproj
@@ -34,4 +34,9 @@
     </EmbeddedResource>
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Areas\Collaborator\Models\" />
+  </ItemGroup>
+
 </Project>
