--- a/mvCommerce/appsettings.Development.json
+++ b/mvCommerce/appsettings.Development.json
@@ -10,6 +10,6 @@
     "ServerSMTP": "smtp.gmail.com",
     "ServerPort": 587,
     "Username": "mvcommerce001@gmail.com",
-    "Password": "mvcommerce741"
+    "Password": "mgdponhbdwpdzcmc"
   }
 }
