--- a/mvCommerce/appsettings.Development.json
+++ b/mvCommerce/appsettings.Development.json
@@ -11,5 +11,6 @@
     "ServerPort": 587,
     "Username": "mvcommerce001@gmail.com",
     "Password": "mgdponhbdwpdzcmc"
-  }
+  },
+  "KeyCripty":  "_wYKx*4110af!f982&"
 }
