Initializing WS Correios in Shopping Cart

--- a/mvCommerce/appsettings.Development.json
+++ b/mvCommerce/appsettings.Development.json
@@ -12,5 +12,10 @@
     "Username": "mvcommerce001@gmail.com",
     "Password": "mgdponhbdwpdzcmc"
   },
-  "KeyCripty":  "_wYKx*4110af!f982&"
+  "KeyCripty": "_wYKx*4110af!f982&",
+  "Freight": {
+    "CepOrigem": "09941640",
+    "MaoPropria": "N",
+    "AvisoRecebimento": "N"
+  }
 }
