--- a/mvCommerce/mvCommerce.csproj
+++ b/mvCommerce/mvCommerce.csproj
@@ -50,6 +50,8 @@
 
 
   <ItemGroup>
+    <Folder Include="Areas\Client\Data\" />
+    <Folder Include="Areas\Client\Models\" />
     <Folder Include="Areas\Collaborator\Models\" />
     <Folder Include="wwwroot\uploads\temp\" />
   </ItemGroup>
