Installing librarie of PagarMe and initializing ManagementPagarMe class

--- a/mvCommerce/appsettings.Development.json
+++ b/mvCommerce/appsettings.Development.json
@@ -13,10 +13,16 @@
     "Password": "mgdponhbdwpdzcmc"
   },
   "KeyCripty": "_wYKx*4110af!f982&",
-  
+
   "Freight": {
     "CepOrigem": "09941640",
     "MaoPropria": "N",
     "AvisoRecebimento": "N"
+  },
+  "Payment": {
+    "PagarMe": {
+      "ApiKey": "ak_test_OrAN4W7xYasC12BrU26ZaryK7DCxOF",
+      "EncryptionKey": "ek_test_UvtYiTcWxdm8wzmWIHUGfr5mAS2Y1C"
+    }
   }
 }
