Initializing screen of new address

--- a/mvCommerce/mvCommerce.csproj
+++ b/mvCommerce/mvCommerce.csproj
@@ -61,4 +61,12 @@
     <WCFMetadata Include="Connected Services" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Content Update="Views\ShoppingCart\Index.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
